[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/countdown.gd" type="Script" id=2]
[ext_resource path="res://scripts/gui.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/normal_info_0.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=6]
size = 96
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "pop_in"

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="CountDownText" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -43.5
margin_right = 29.0
margin_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource( 8 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/CountDownText"]
anims/pop_in = SubResource( 4 )

[node name="InfoText" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -29.0
margin_top = -87.0
margin_right = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource( 5 )
text = "Press space to restart"
align = 1
valign = 1

[node name="TimerText" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_right = 29.0
margin_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="HUD"]

[node name="Counter" type="Timer" parent="HUD"]

[connection signal="timeout" from="HUD/Timer" to="HUD" method="_on_Timer_timeout"]
[connection signal="timeout" from="HUD/Counter" to="HUD" method="_on_Counter_timeout"]
